added and updated island projects
edited my orcas a bit, and created lopez

--- a/styles/islands.css
+++ b/styles/islands.css
@@ -1,7 +1,9 @@
 :root {
+    --blue: #11467D;
     --green:#074817;
     --white:#ffffff;
     font-family: "Raleway", sans-serif;
+    color:var(--blue);
 }
 
 body, header, main, footer, section, article, aside{
