fixed issues regarding ";"

--- a/styles/islands.css
+++ b/styles/islands.css
@@ -54,7 +54,7 @@ header {
 .logo1 {
     height: 100px;
     width: auto;
-    margin: 10px auto
+    margin: 10px auto;
 }
 
 header a, header p, nav a {
