--- a/styles/islands.css
+++ b/styles/islands.css
@@ -76,9 +76,9 @@ h1 {
     text-shadow: #074817 3px 3px 3px;
 }
 
-nav ul{
+/* nav ul{
     background-color: var(--white);
-}
+} */
 nav ul li {
     list-style-type: none;
     text-align: center;
