--- a/styles/mobile-nav.css
+++ b/styles/mobile-nav.css
@@ -55,6 +55,7 @@
     width: 100%;
     background-color: white;
     border-radius: 10px;
+    /* display: inline-block; */
 }
 
 /* hamburger menu */
@@ -63,6 +64,7 @@
         flex-direction: column;
         align-items: flex-start;
     }
+    
 
     .toggle-button {
         display: flex;
@@ -78,7 +80,7 @@
         flex-direction: column;
     }
 
-    .navbar-links ul li{
+    .navbar-links ul li {
         text-align: center;
     }
 
