--- a/styles/final.css
+++ b/styles/final.css
@@ -100,3 +100,17 @@ footer p {
     box-sizing: border-box;
     font-size: 12px;
 }
+
+@media screen and (max-width:800px) {
+    .dexter,
+    .pure-g,
+    .pure-u-1-3,
+    .pure-u-1-4,
+    .pure-u-1-2 {
+        display: block;
+        width: 95%;
+        margin: auto;
+
+    }
+
+}
